--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" >
     <head>
         <title>Weather</title>
-    
-
+        <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1, target-densityDpi=120"/>
         <link href="styles/att-sdk.css" rel="stylesheet" />
         <link href="styles/vendor.css" rel="stylesheet" />
         <link href="styles/sample-app.css" rel="stylesheet" />
