--- a/digitallife/index.html
+++ b/digitallife/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Weather</title>
 
-
+        <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1, target-densityDpi=120"/>
         <link href="styles/att-sdk.css" rel="stylesheet" />
         <link href="styles/vendor.css" rel="stylesheet" />
         <link href="styles/sample-app.css" rel="stylesheet" />
