--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 <script src="app-store/controllers/appsCtrl.js"></script>
 <script src="app-store/controllers/appDetailsCtrl.js"></script>
 <script src="mobile-share/controllers/mobileShareController.js"></script>
+<script src="plans/controllers/enrollmentOptionsCtrl.js"></script>
 
 <!--Services-->
 <script src="services/vehicleService.js"></script>
